refactor: 카드 게임 흐름 오케스트라 구현 및 시간 설정 외부화